--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mocha": "mocha -R spec dist/test/test-*.js",
     "cover": "istanbul cover _mocha -- -R spec dist/test/test-*.js",
     "lint": "node support/tslint_wrapper.js src/**.ts",
-    "build:src": "cd src/lib && tsc && dts-generator --name ts-promise --baseDir . --out ../../dist/ts-promise.d.ts index.ts && echo declare module \\'ts-promise\\' {\\\\n\\\\texport \\* from \\'ts-promise/index\\'\\;\\\\n\\\\texport { default } from \\'ts-promise/index\\'\\;\\\\n} >> ../../dist/ts-promise.d.ts",
+    "build:src": "cd src/lib && tsc && dts-generator --name ts-promise --baseDir . --out ../../dist/ts-promise.d.ts index.ts --main ts-promise/index --es6 --es6default",
     "watch:src": "cd src/lib && tsc --watch",
     "build:test": "cd src/test && tsc",
     "watch:test": "cd src/test && tsc --watch",
@@ -37,7 +37,7 @@
   "devDependencies": {
     "chai": "^2.2.0",
     "coveralls": "^2.11.2",
-    "dts-generator": "^1.3.1",
+    "dts-generator": "poelstra/dts-generator#6c96dfba98a467d76071fa67666474f760dab64f",
     "istanbul": "^0.3.13",
     "mocha": "^2.2.4",
     "multi-glob": "^0.4.0",
