--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "rimraf": "^2.3.2",
     "source-map-support": "^0.2.10",
     "tslint": "^2.1.1",
-    "typescript": "^1.5.0-alpha"
+    "typescript": "~1.7.5"
   }
 }
