--- a/src/lib/tsconfig.json
+++ b/src/lib/tsconfig.json
@@ -7,7 +7,8 @@
         "noImplicitAny": true,
         "removeComments": false,
         "sourceMap": true,
-        "outDir": "../../dist/lib/",
+        "outDir": "../../dist/",
+        "rootDir": "..",
         "noLib": false
     },
     "filesGlob": [
