polyfill: Add opt-in polyfill support.

--- a/src/lib/tsconfig.json
+++ b/src/lib/tsconfig.json
@@ -23,6 +23,7 @@
         "async.ts",
         "BaseError.ts",
         "index.ts",
+        "polyfill.ts",
         "Promise.ts",
         "Stack.ts",
         "Trace.ts",
