--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "watch:src": "cd src/lib && tsc --watch",
     "build:test": "cd src/test && tsc",
     "watch:test": "cd src/test && tsc --watch",
-    "build": "npm run build:src && npm run build:test",
+    "build": "npm run build:src && npm run build:test && npm run browserify && npm run minify",
     "clean": "rimraf -rf dist",
-    "prepublish": "npm run lint && npm run build && npm run test"
+    "prepublish": "npm run lint && npm run build && npm run test",
+    "browserify": "browserify --node --standalone ts-promise ./dist/lib/index.js > ./dist/browser.js",
+    "minify": "uglifyjs ./dist/browser.js --compress --mangle --mangle-props --mangle-regex='/^_/' --reserved 'Promise' > ./dist/browser.min.js"
   },
   "typings": "./dist/lib/index.d.ts",
   "devDependencies": {
+    "browserify": "^13.0.1",
     "chai": "^2.2.0",
     "coveralls": "^2.11.11",
     "istanbul": "^0.3.22",
