--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
   "typings": "./dist/lib/index.d.ts",
   "types": "./dist/lib/index.d.ts",
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.45",
+    "@types/source-map-support": "^0.2.28",
     "browserify": "^13.0.1",
     "chai": "^2.2.0",
     "coveralls": "^2.11.11",
