package: No need to run lint twice when publishing.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "watch:test": "cd src/test && tsc --watch",
     "build": "npm run build:test && npm run build:src && npm run browserify && npm run minify",
     "clean": "rimraf -rf dist",
-    "prepublish": "npm run lint && npm run build && npm run test",
+    "prepublish": "npm run build && npm run test",
     "browserify": "browserify --node --standalone ts-promise ./dist/lib/index.js > ./dist/browser.js",
     "minify": "uglifyjs ./dist/browser.js --compress --mangle --mangle-props --mangle-regex='/^_/' --reserved 'Promise' > ./dist/browser.min.js"
   },
