package: Prevent wall of error output from npm when a build task fails.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/poelstra/ts-promise",
   "scripts": {
-    "test": "npm run lint && npm run mocha",
+    "test": "npm run -s lint && npm run -s mocha",
     "mocha": "mocha -R spec dist/test/test-*.js",
     "cover": "istanbul cover --report json _mocha -- -R spec dist/test/test-*.js && remap-istanbul -i coverage/coverage-final.json -t html -o coverage/html-report",
     "lint": "tslint -t verbose src/**/*.ts",
@@ -27,9 +27,9 @@
     "watch:src": "cd src/lib && tsc --watch",
     "build:test": "cd src/test && tsc",
     "watch:test": "cd src/test && tsc --watch",
-    "build": "npm run build:test && npm run build:src && npm run browserify && npm run minify",
+    "build": "npm run -s build:test && npm run -s build:src && npm run -s browserify && npm run -s minify",
     "clean": "rimraf -rf dist",
-    "prepublish": "npm run build && npm run test",
+    "prepublish": "npm run -s build && npm run -s test",
     "browserify": "browserify --node --standalone ts-promise ./dist/lib/index.js > ./dist/browser.js",
     "minify": "uglifyjs ./dist/browser.js --compress --mangle --mangle-props --mangle-regex='/^_/' --reserved 'Promise' > ./dist/browser.min.js"
   },
