--- a/src/lib/tsconfig.json
+++ b/src/lib/tsconfig.json
@@ -1,17 +1,3 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
-        "declaration": true,
-        "noImplicitAny": true,
-        "removeComments": false,
-        "sourceMap": true,
-        "noLib": false,
-        "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "moduleResolution": "node",
-        "outDir": "../../dist/",
-        "rootDir": "..",
-        "types": []
-    }
+	"extends": "../tsconfig.base.json"
 }
