.vscode: Use watch task as the default build task (Ctrl+Shift+B).

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,11 @@
 			"problemMatcher": [
 				"$tsc-watch"
 			],
-			"isBackground": true
+			"isBackground": true,
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
 		}
 	]
 }
