--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.90",
+    "@types/sinon": "^4.1.3",
     "@types/source-map-support": "^0.2.28",
     "browserify": "^13.0.1",
     "chai": "^2.2.0",
@@ -49,8 +50,9 @@
     "istanbul": "^0.4.5",
     "mocha": "^2.5.3",
     "promises-aplus-tests": "^2.1.2",
-    "remap-istanbul": "^0.9.5",
+    "remap-istanbul": "^0.10.1",
     "rimraf": "^2.5.4",
+    "sinon": "^4.4.2",
     "source-map-support": "^0.4.2",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2",
