--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "sinon": "^4.4.2",
     "source-map-support": "^0.4.2",
     "tslint": "^5.8.0",
-    "typescript": "^2.6.2",
+    "typescript": "2.7.2",
     "uglify-js": "^2.7.3"
   }
 }
