--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build": "npm run -s build:test && npm run -s build:src && npm run -s browserify && npm run -s minify",
     "clean": "rimraf -rf dist",
     "prepare": "npm run -s test",
-    "prepublishOnly": "npm run -s test",
+    "prepublishOnly": "npm run -s prepare",
     "preversion": "npm install",
     "version": "git add package-lock.json",
     "browserify": "browserify --node --standalone ts-promise ./dist/lib/index.js > ./dist/browser.js",
@@ -39,23 +39,23 @@
   "typings": "./dist/lib/index.d.ts",
   "types": "./dist/lib/index.d.ts",
   "devDependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/mocha": "^2.2.32",
-    "@types/node": "^6.0.90",
-    "@types/sinon": "^4.1.3",
-    "@types/source-map-support": "^0.2.28",
-    "browserify": "^16.2.2",
-    "chai": "^2.2.0",
-    "coveralls": "^3.0.0",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.6.8",
+    "@types/sinon": "^7.0.13",
+    "@types/source-map-support": "^0.5.0",
+    "browserify": "^16.3.0",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.5",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0",
+    "mocha": "^6.2.0",
     "promises-aplus-tests": "^2.1.2",
-    "remap-istanbul": "^0.10.1",
-    "rimraf": "^2.6.2",
-    "sinon": "^4.4.2",
-    "source-map-support": "^0.4.2",
-    "tslint": "^5.11.0",
-    "typescript": "3.0.1",
-    "uglify-js": "^2.7.3"
+    "remap-istanbul": "^0.13.0",
+    "rimraf": "^2.6.3",
+    "sinon": "^7.3.2",
+    "source-map-support": "^0.5.12",
+    "tslint": "^5.18.0",
+    "typescript": "3.5.3",
+    "uglify-js": "^3.6.0"
   }
 }
